REGRESSION (r67166): "Placeholder" text remains in input box after 2nd focus() https://bugs.webkit.org/show_bug.cgi?id=45940

Reviewed by Dimitri Glazkov.

WebCore:

Test: fast/forms/input-placeholder-focus-twice.html

* html/HTMLFormControlElement.h: Make supportsPlaceholder() public.
* rendering/RenderTextControlSingleLine.cpp:
(WebCore::RenderTextControlSingleLine::updateFromElement):
 We always need to update the renderer value with the DOM value if
 the element supports the placeholder feature.
 Note: the placeholder feature and "unacceptable renderer value"
 are exclusive.

LayoutTests:

* fast/forms/input-placeholder-focus-twice.html: Added.
* platform/chromium/test_expectations.txt:
* platform/mac/fast/forms/input-placeholder-focus-twice-expected.checksum: Added.
* platform/mac/fast/forms/input-placeholder-focus-twice-expected.png: Added.
* platform/mac/fast/forms/input-placeholder-focus-twice-expected.txt: Added.

Canonical link: https://commits.webkit.org/59782@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69176 268f45cc-cd09-0410-ab3c-d52691b4dbfc